public/src/style/style.css
/* Reset CSS */
*,
*::after,
*::before {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  list-style: none;
  text-decoration: none;
}

/* Variables couleurs */
:root {
  --dark-blue: #081229;
  --light-blue: #181d3b;
  --pink: #ec5891;
  --gray: #b6b6b6;
  font-size: 16px;
}

@media screen and (max-width: 768px) {
  :root {
    font-size: 12px;
  }
}

@media screen and (max-width: 640px) {
  :root {
    font-size: 10px;
  }
}

html {
  font-family: "Roboto", sans-serif;
  background-color: var(--dark-blue);
}

html.scrollDisable {
  overflow: hidden;
}

/* Header */
header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  padding: 10px 20px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  z-index: 1000;
}

.logoContainer {
  position: relative;
}

.logoContainer::after {
  position: absolute;
  content: "";
  width: 0;
  height: 2px;
  left: 0;
  top: 70px;
  background-color: var(--pink);
  transition: 0.2s ease;
}

.logo {
  width: 80px;
  position: relative;
}

.nav {
  display: flex;
  align-items: center;
  column-gap: 35px;
}

#crossIcon {
  display: none;
}

.nav--item {
  position: relative;
  color: white;
  cursor: pointer;
}

.nav--item::after {
  position: absolute;
  content: "";
  width: 0;
  height: 2px;
  left: 0;
  top: 30px;
  background-color: var(--pink);
  transition: 0.2s ease;
}

.nav--item:hover::after {
  width: 100%;
}

.nav--item-nb {
  color: var(--pink);
}

#hamburgerMenu {
  display: none;
}

.nav--links {
  display: none;
}

@media screen and (max-width: 768px) {
  .logo {
    width: 70px;
  }

  #crossIcon {
    display: none;
  }

  .nav--links {
    display: none;
  }
}

@media screen and (max-width: 640px) {
  .logo {
    width: 60px;
  }

  nav {
    position: absolute;
    top: 0;
    left: 100%;
    width: 70%;
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    transition: 0.3s ease;
    background-color: var(--light-blue);
    z-index: 100;
  }

  nav.enable {
    left: 30%;
  }

  .nav {
    margin-top: auto;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    row-gap: 40px;
  }

  #crossIcon {
    display: block;
    position: absolute;
    top: 40px;
    right: 20px;
    color: white;
    font-size: 1.8rem;
  }

  #hamburgerMenu {
    display: block;
    color: white;
    font-size: 2rem;
  }

  .nav--item {
    font-size: 1.8rem;
  }

  .nav--links {
    width: 100%;
    display: flex;
    justify-content: space-around;
    align-items: center;
    column-gap: 20px;
    padding: 15px;
    margin-top: auto;
  }

  .nav--links > a {
    font-size: 1.8rem;
    color: white;
    cursor: pointer;
    transition: 0.2s ease;
  }
}

@keyframes closeMenuAnimation {
  0% {
    left: 100%;
  }

  90% {
    left: 27%;
  }

  100% {
    left: 30%;
  }
}

/* Main */
main {
  height: 100vh;
}

/* Sections */
section {
  width: 100%;
  height: 100vh;
  padding: 0 30px;
}

@media screen and (max-width: 640px) {
  section {
    padding: 0;
  }
}

/* Presentation */
.mainContainer {
  margin: 0 auto;
  width: 80%;
  max-width: 1000px;
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  row-gap: 20px;
  z-index: -10;
}

#presentationSection,
#aboutSection,
#projectsSection,
#contactSection {
  visibility: hidden;
}

.presentation--hello {
  font-size: 2.8rem;
  font-weight: bold;
  color: #ec5891;
  font-family: "Abril Fatface", cursive;
  letter-spacing: 5px;
}

.presentation--name {
  font-size: 4rem;
  font-weight: bold;
  color: white;
}

.presentation--info {
  font-size: 2rem;
  color: var(--gray);
}

.btn--cta {
  width: fit-content;
  background-color: var(--pink);
  color: var(--dark-blue);
  padding: 15px 35px;
  font-weight: bold;
  font-size: 1rem;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  transition: 0.3s ease;
}

.btn--cta:hover {
  transform: scale(1.07);
}

.btn--cta.sm {
  display: none;
}

@media screen and (max-width: 768px) {
  .btn--cta {
    padding: 12px 20px;
  }
}

@media screen and (max-width: 640px) {
  .btn--cta.sm {
    display: block;
  }

  .btn--cta.md {
    display: none;
  }
}

/* About */
.section--title {
  color: white;
  font-size: 2.3rem;
}

.section--title > span {
  color: var(--pink);
}

.about {
  display: flex;
  align-items: center;
  column-gap: 50px;
}

.about--top {
  display: flex;
  justify-content: center;
  align-items: center;
  column-gap: 65px;
}

.about--img-sm {
  display: none;
}

.about--info {
  display: flex;
  flex-direction: column;
  row-gap: 20px;
}

.about--info-para {
  color: white;
}

.about--img-md {
  width: 200px;
  border-radius: 5px;
}

@media screen and (max-width: 768px) {
  .about--img-md {
    width: 180px;
  }
}

@media screen and (max-width: 640px) {
  .about--top {
    margin: 10px 0;
  }

  .about--img-sm {
    display: block;
    width: 90px;
    height: 90px;
    border-radius: 50%;
    background-image: url("../img/moi.jpg");
    background-size: cover;
    background-position: center;
  }

  .about--img-md {
    display: none;
  }

  .about--info-para {
    font-size: 1.2rem;
    text-align: center;
  }
}

/* Projets */
.projects {
  display: flex;
  flex-direction: column;
  justify-content: center;
  row-gap: 20px;
}

.swiper {
  width: 100%;
  cursor: grab;
}

.project {
  display: flex;
  flex-direction: column;
  background-color: var(--light-blue);
  padding: 20px;
}

.project--header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 25px;
}

.project--header > a {
  color: white;
  font-size: 1.8rem;
}

.project--img {
  width: 100%;
  margin-bottom: 10px;
  cursor: pointer;
}

.project--details {
  display: flex;
  flex-direction: column;
  flex: 1 1 0%;
}

.project--title {
  color: white;
  margin-bottom: 10px;
}

.project--info {
  color: white;
  margin-bottom: 10px;
}

.project--techno {
  color: var(--gray);
  margin-top: auto;
}

.swiperButton--container {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.swiperButton--container > i {
  font-size: 1.3rem;
  color: var(--pink);
  cursor: pointer;
  transition: 0.2s ease;
}

.swiperButton--container > i:hover {
  transform: scale(1.2);
}

@media screen and (max-width: 768px) {
}

@media screen and (max-width: 640px) {
}

/* Contact */
.contact {
  display: flex;
  flex-direction: column;
  justify-content: center;
  row-gap: 20px;
}

form {
  display: flex;
  flex-direction: column;
  row-gap: 15px;
}

.form--head {
  display: flex;
  align-items: center;
  column-gap: 15px;
}

.form--input {
  width: 100%;
  font-weight: bold;
  font-size: 1.1rem;
  color: var(--light-blue);
  padding: 15px;
  border-radius: 5px;
  border: none;
  outline: none;
}

.form--input.message {
  resize: none;
  font-family: "Roboto", sans-serif;
}

.form--btn {
  color: var(--dark-blue);
  padding: 15px;
  font-weight: bold;
  font-size: 1rem;
  border: none;
  border-radius: 5px;
  transition: 0.3s ease;
}

.form--btn.disable {
  cursor: not-allowed;
  background-color: #ec589169;
}

.form--btn.enable {
  cursor: pointer;
  background-color: var(--pink);
}

@media screen and (max-width: 768px) {
  .form--input.message {
    height: 180px;
  }
}

@media screen and (max-width: 640px) {
  .form--input {
    padding: 10px;
  }

  .form--input.message {
    height: 150px;
  }
}

/* Page des projets mobiles */
.mobileAppContainer {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}
iframe {
  margin-top: 50px;
}

/* Footer */
footer {
  width: 100%;
  background-color: var(--light-blue);
}

.footer--container {
  width: 80%;
  max-width: 1000px;
  margin: 0 auto;
  padding: 10px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.logo--footer {
  width: 80px;
}

.footer--legal {
  color: white;
  position: relative;
}

.footer--legal::after {
  position: absolute;
  content: "";
  width: 0;
  height: 2px;
  left: 0;
  top: 30px;
  background-color: var(--pink);
  transition: 0.2s ease;
}

.footer--legal:hover::after {
  width: 100%;
}

.footer--links {
  display: flex;
  align-items: center;
  column-gap: 20px;
}

.footer--links > a {
  font-size: 1.5rem;
  color: white;
  cursor: pointer;
  transition: 0.2s ease;
}

.footer--links > a:hover {
  color: var(--pink);
}

@media screen and (max-width: 768px) {
}

@media screen and (max-width: 640px) {
  .logo--footer {
    width: 50px;
  }
}

/* Mentions Légales */
.legalContainer {
  padding: 40px 20px;
  height: fit-content;
}

.legal--btn {
  position: fixed;
  bottom: 40px;
}

.legal--btn > i {
  margin-right: 5px;
}

.legalContent {
  max-width: 1000px;
  margin: 50px auto;
}

.legal--title {
  color: white;
  text-align: center;
}

.legal--subtitle {
  color: white;
  margin: 30px 0 10px 0;
}

.legal--para {
  color: var(--gray);
  margin-bottom: 10px;
}

@media screen and (max-width: 768px) {
}

@media screen and (max-width: 640px) {
}

/* Social Media Bottom Left*/
.social {
  position: fixed;
  bottom: 0;
  left: 40px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  row-gap: 25px;
}

.social i {
  color: white;
  font-size: 1.7rem;
  cursor: pointer;
  transition: 0.3s ease;
}

.social i:hover {
  color: var(--pink);
}

.contact--line {
  width: 1px;
  height: 100px;
  background-color: white;
}

@media screen and (max-width: 768px) {
  .social {
    display: flex;
  }
}

@media screen and (max-width: 640px) {
  .social {
    display: none;
  }
}

/* Mail Bottom Right */
.email {
  position: fixed;
  bottom: 0;
  right: 40px;
  width: 32px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.email--item {
  color: white;
  transform: rotate(90deg);
  margin-bottom: 120px;
  cursor: pointer;
}

@media screen and (max-width: 768px) {
  .email {
    display: flex;
  }
}

@media screen and (max-width: 640px) {
  .email {
    display: none;
  }
}

/* Animations */
@keyframes firstLoadTransition {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@keyframes firstLoadTransitionDownToUp {
  from {
    opacity: 0;
    transform: translateY(50px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

